# aleo-hasher

./: Cargo.toml
java/: HelloWorld.java
src/: lib.rs  main.rs
