[package]
name = "aleo-hasher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aleo-rust = "0.5.5"
anyhow = "1.0.72"
once_cell = "1.18.0"
snarkvm = "0.14.6"
openssl = { version = "0.10.35", features = ["vendored"] }
itertools = "0.11.0"
snarkvm-circuit-network = "0.16.6"